Change defaults to match my case

--- a/src/var/www/htdocs/mail1.growtharchitect.fi/index.html
+++ b/src/var/www/htdocs/mail1.growtharchitect.fi/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>mercury</title>
+        <title>mail1</title>
     </head>
     <body>
         <p>Mail</p>
